[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
streamlit = "^1.35.0"
pytest = "^7.4.4"
mypy = "^1.8.0"
shared = {git = "https://github.com/twaslowski/lingolift-shared"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4.4"
addopts = "-s -v --disable-warnings"